[package]
name = "wp2hugo"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = "0.4.42"
mysql = { version = "26.0.1", features = ["chrono"] }
serde_json = "1.0.145"
tera = "1.20.1"
serde = { version = "1.0.228", features = ["derive"] }
chrono-tz = "0.9.0"
htmd = "0.5.0"
fast_html2md = "0.0.50"
serde_yaml = "0.9.34"
regex = "1.12.2"
